@@ -10,13 +10,13 @@ class UrlForFileColumnTest < Test::Unit::TestCase
   end
 
   def test_url_for_file_column_with_temp_entry
-    @e = Entry.new(:image => upload("skanthak.png"))
+    @e = Entry.new(:image => upload(f("skanthak.png")))
     url = url_for_file_column("e", "image")
     assert_match %r{^/entry/image/tmp/\d+(\.\d+)+/skanthak.png$}, url
   end
 
   def test_url_for_file_column_with_saved_entry
-    @e = Entry.new(:image => upload("skanthak.png"))
+    @e = Entry.new(:image => upload(f("skanthak.png")))
     assert @e.save
 
     url = url_for_file_column("e", "image")
@@ -24,7 +24,7 @@ class UrlForFileColumnTest < Test::Unit::TestCase
   end
 
   def test_url_for_file_column_works_with_symbol
-    @e = Entry.new(:image => upload("skanthak.png"))
+    @e = Entry.new(:image => upload(f("skanthak.png")))
     assert @e.save
 
     url = url_for_file_column(:e, :image)
@@ -32,7 +32,7 @@ class UrlForFileColumnTest < Test::Unit::TestCase
   end
   
   def test_url_for_file_column_works_with_object
-    e = Entry.new(:image => upload("skanthak.png"))
+    e = Entry.new(:image => upload(f("skanthak.png")))
     assert e.save
 
     url = url_for_file_column(e, "image")
@@ -73,7 +73,7 @@ class UrlForFileColumnTest < Test::Unit::TestCase
 
   IMAGE_URL = %r{^/foo/bar/entry/image/.+/skanthak.png$}
   def test_with_image_tag
-    e = Entry.new(:image => upload("skanthak.png"))
+    e = Entry.new(:image => upload(f("skanthak.png")))
     html = image_tag url_for_file_column(e, "image")
     url = html.scan(/src=\"(.+)\"/).first.first
 
@@ -81,7 +81,7 @@ class UrlForFileColumnTest < Test::Unit::TestCase
   end
 
   def test_with_link_to_tag
-    e = Entry.new(:image => upload("skanthak.png"))
+    e = Entry.new(:image => upload(f("skanthak.png")))
     html = link_to "Download", url_for_file_column(e, "image", :absolute => true)
     url = html.scan(/href=\"(.+)\"/).first.first
     
@@ -89,7 +89,7 @@ class UrlForFileColumnTest < Test::Unit::TestCase
   end
 
   def test_relative_url_root_not_modified
-    e = Entry.new(:image => upload("skanthak.png"))
+    e = Entry.new(:image => upload(f("skanthak.png")))
     url_for_file_column(e, "image", :absolute => true)
     
     assert_equal "/foo/bar", @request.relative_url_root
